--- a/xmlTester.html
+++ b/xmlTester.html
@@ -6,12 +6,15 @@
     <h3> by Samantha Ngo </h3>
   </head>
   <body>
-    <button type="button" id="clear">Clear the Board!</button><br><br>
+    <button type="button" id="start">Start Animation</button> &nbsp&nbsp
+    <button type="button" id="stop">Stop Animation</button> <br><br>
    <svg id="vimage" height="500" width="500" style="border: 1px solid;">
 
+     <!--
       <circle cx="350" cy="250" r="75" fill="purple"/>
       <rect x="50" y="400" width="300" height="75" fill="lightblue"/>
-
+      -->
+     
    </svg>
    
    <script src="svg.js"></script>
